--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
         - ./tests/codeception/_output/:/project/_output/
         - ./tests/codeception/_support/:/project/_support/
   chrome:
-      image: 'selenium/standalone-chrome-debug'
+      image: selenium/standalone-chrome-debug:3.141.5
       ports:
         - 5900:5900
         - 4444:4444
