AT-716: Update Inpsyde in code to Syde (license, copyright, text)

--- a/composer.json
+++ b/composer.json
@@ -23,9 +23,9 @@
     "license": "GPL-2.0-or-later",
     "authors": [
         {
-            "name": "Inpsyde GmbH",
-            "email": "hello@inpsyde.com",
-            "homepage": "https://inpsyde.com",
+            "name": "Syde GmbH",
+            "homepage": "https://syde.com/",
+            "email": "hello@syde.com",
             "role": "Company"
         }
     ],
