--- a/package.json
+++ b/package.json
@@ -1,38 +1,39 @@
 {
-  "name": "multilingualpress-yoast-seo-sync",
-  "version": "2.1.1",
-  "description": "Translate Yoast SEO post metadata between translated posts.",
-  "keywords": [
-    "bilingual",
-    "i18n",
-    "international",
-    "internationalization",
-    "l10n",
-    "lang",
-    "language",
-    "localization",
-    "multi",
-    "multilanguage",
-    "multilingual",
-    "multisite",
-    "network",
-    "translation"
-  ],
-  "license": "GPL-2.0-or-later",
-  "author": {
-    "name": "Inpsyde GmbH",
-    "email": "hello@inpsyde.com",
-    "url": "https://inpsyde.com"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://bitbucket.org/inpsyde/multilingualpresspro"
-  },
-  "devDependencies": {
-    "eslint": "^7.0.0",
-    "gulp": "^4.0.0",
-    "gulp-cli": "^2.1.0",
-    "gulp-eslint": "^6.0.0",
-    "gulp-newer": "^1.3.0"
-  }
+    "name": "multilingualpress-yoast-seo-sync",
+    "version": "2.1.1",
+    "description": "Translate Yoast SEO post metadata between translated posts.",
+    "keywords": [
+        "bilingual",
+        "i18n",
+        "international",
+        "internationalization",
+        "l10n",
+        "lang",
+        "language",
+        "localization",
+        "multi",
+        "multilanguage",
+        "multilingual",
+        "multisite",
+        "network",
+        "translation"
+    ],
+    "license": "GPL-2.0-or-later",
+    "author": {
+        "name": "Syde GmbH",
+        "email": "hello@syde.com",
+        "url": "https://syde.com/"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://bitbucket.org/inpsyde/multilingualpresspro"
+    },
+    "devDependencies": {
+        "eslint": "^7.0.0",
+        "gulp": "^4.0.0",
+        "gulp-cli": "^2.1.0",
+        "gulp-eslint": "^6.0.0",
+        "gulp-newer": "^1.3.0"
+    },
+    "homepage": "https://syde.com"
 }
